--- a/WoE.Recortes.Rmd
+++ b/WoE.Recortes.Rmd
@@ -15,20 +15,43 @@ knit: (function(inputFile, encoding) {
 
 
 # Background
-This memo provides the formal advice on the stock status and risks to sustainability for all elasmobranch (sharks and rays) stocks identified in the catch of commercial and/or recreational fisheries operating in Western Australia (WA). This includes indicator species, Gummy (*Mustelus antarcticus*), dusky (*Carcharhinus obscurus*), whiskery (*Furgaleus macki*) and sandbar (*C. plumbeus*) sharks, and non-indicator species. A risk-based Weight of Evidence (WoE) assessment of stocks status was undertaken for all species, using ISO 31000-based risk assessment methods (Appendix 1).
+Over 100 elasmobranch species have been identified in the catches of commercial and/or recreational fisheries in WA. Gummy, dusky, whiskery, and sandbar sharks are the most commonly captured species (~80% of the elasmobranch catch). These species have been targeted in the Temperate Demersal Gillnet and Demersal Longline Fisheries (TDGDLF), which operate in the West Coast and South Coast Bioregions and comprise the West Coast Demersal Gillnet and Demersal Longline (Interim) Managed Fishery (WCDGDLF), which operates between 26° and 33° S, and the Joint Authority Southern Demersal Gillnet and Demersal Longline Managed Fishery (JASDGDLF), which operates from 33° S to the WA/South Australia (SA) border. Sandbar shark and to a lesser extent dusky shark were also targeted by the Northern Shark Fisheries, which operated between 114° 06' E and the WA/Northern Territory (NT) border and ceased operations in 2008-09. The current catch of sharks and rays in other WA commercial fisheries is negligible (< 10 t per annum) and recreational fishers retain very small numbers of sharks in WA. Indigenous catches of these species are considered to be negligible both in terms of historical and extant harvest.
 
-The previous assessment (November 2017) determined a **Medium** risk for whiskery, sandbar and dusky sharks, and a **Low** risk for gummy shark. The previous assessment did not determine the risk level for non-indicator species. 
+Based on their importance to fisheries, inherent vulnerabilities and sustainability risk, whiskery, gummy, dusky and sandbar sharks have been selected as indicators for the status of the temperate elasmobranch (sharks and rays) ‘suite’ as they represent the range of life history strategies of other elasmobranch species caught by these fisheries. However, with the increasing number of elasmobranch species being listed in national (Environment Protection and Biodiversity Conservation Act 1999, EBPC Act) and international (Convention on International Trade in Endangered Species, CITES; Convention on the Conservation of Migratory Species, CMS) protection lists, species-specific scientific advice on stock status at the local level is needed to comply with national and international legislation.  
+
+For whiskery shark, the initial historical stock assessment was based on a bespoke age- and sex-structured model (i.e., L5 assessment, [@Simpfendorfer2000a]). This assessment determined that female mature biomass in 1997-98 (the last year of the assessed data series) was at 23% of virgin levels, and to achieve management biomass targets with a 50% probability by 2010, recommended catches were required to be maintained below 190 tonnes. For sandbar and dusky sharks, previous stock assessments were based on demographic and mark recapture analyses [@McAuley2007b]. These assessments determined that the combined fishing pressure from WA shark fisheries and cryptic mortality from other fisheries was deemed unsustainable at the effort peak (1990s-2000s). More recently, the weight of evidence assessments for the four indicator species (L1 and L5 assessments for whiskery shark, L1 assessments for gummy, dusky and sandbar sharks), determined that the risk posed by fishing to the sustainability of these stocks was assessed as Medium for 2015-16 (last year of the data series) and for the projected period to 2020-21 [@bracciniRiskbasedWeightEvidence2021]. Prior to the current study, there has been no stock assessments for other shark and ray species captured in WA.  
+
+Following a comprehensive reconstruction of the total catch trajectories of all species for which data are available [@Braccini2021; @bracciniQuantifyingSharkRay2021; @bracciniRecreationalHarvestSharks2021], a range of assessment methods was used to provide species-specific scientific advice on the stock status of all elasmobranch species. First, a Productivity Susceptibility Analysis (PSA) was used to filter out species with historically very low catch volumes and those with low vulnerability  from further analysis. Second, species ranked by the PSA as having high vulnerability were assessed using a combination of spatio-temporal changes in reported catch and effort, catch-only models, State-space surplus production models, and age- and sex-structured integrated models, depending on data availability (Figure 1). Biomass estimates from the production and integrated models were compared to reference levels relating to estimates of Maximum Sustainable Yield (MSY). The estimated biomass expected to achieve MSY (B~MSY~) was considered as the Threshold reference level (B~Thr~) for the stock; 0.5 B~MSY~ was set as the Limit reference level (B~Lim~) and 1.2 B~MSY~ was set as the Target reference level (B~Tar~). A flowchart explaining the steps undertaken in this assessment is shown in Figure 2.
+
+For the indicator species, the major performance measures for assessing stock status are spawning stock levels and fishing mortality (F), estimated using an integrated age-structured assessment model. For the non-indicator species, a range of performance measures for assessing stock status are used based on data availability.
+
+For gummy shark, the estimated biomass and F trajectories showed considerable uncertainty. Biomass trajectories considerably declined in the 1980s following increased exploitation but median biomass remained above target levels throughout the time series. Projections to 2026-27 show a slight increasing trend. For 2021-22 and 2026-27, the probability that the relative biomass was above the limit reference level was 100% and the probability that F was below the limit reference level was 100%. Based on all available lines of evidence (see Table below), the risk level over the next five years is estimated to be **Low**. On the basis of this evidence, gummy shark is classified as a **Sustainable stock**.
+
+For dusky shark, biomass trajectories considerably declined in the late 1970s following increased exploitation, with median biomass falling below the threshold reference level in the 2010s, and increasing in recent years following a reduction in catches, with median biomass reaching threshold levels in 2020-21. Projections to 2026-27 show a slight increasing trend. For 2021-22 and 2026-27, the probability that relative biomass was above the limit reference level was 100%. However, the probability that relative biomass was between the limit and threshold reference levels was 47% for 2021-22, and 43% for 2026-27. F trajectories remained at a negligible level at the start of the time series, peaking in the late 1980s and 1990s (when limit reference levels were exceeded), and declining in recent years. For 2021-22, the median F was just below the target reference level. Projections to 2026-27 showed a stable trend. For 2021-22 and 2026-27, the probability that F was below the limit reference level was 100%. However, the probability that F was between the threshold and target levels was 31% for 2026-27. Based on all available lines of evidence (see Table below), the risk level over the next five years is estimated to be **High** mostly due to estimation uncertainty as the integrated model was fitted to length composition data only. On the basis of this evidence, dusky shark is classified as a **Recovering stock**.
+
+For whiskery shark, biomass trajectories considerably declined in the late 1940s following increased exploitation, with median biomass falling below the limit reference level between the 1990s and early 2010s, before increasing in recent years following a reduction in catches, with median biomass remaining above target reference levels since 2020-21. Projections to 2026-27 show an increasing trend. For 2021-22 and 2026-27, the probability that relative biomass was above the limit reference level was 87% and 97%, respectively. However, the probability that relative biomass was below the limit, and between the limit and threshold reference levels was 13% and 19%, respectively, for 2021-22. F trajectories remained at a negligible level at the start of the time series, peaking in the 1990s (when limit reference levels were exceeded), and declining in recent years. For 2021-22, median F was considerably below the target reference level. Projections to 2026-27 show a declining trend. For 2021-22 and 2026-27, the probability that F was below the limit reference level was 100%. Based on all available lines of evidence (see Table below), the risk level over the next five years is estimated to be **Medium**. On the basis of this evidence, whiskery shark is classified as a **Sustainable stock**.
+
+For sandbar shark, biomass trajectories considerably declined in the 1970s following initial exploitation, with median biomass falling between target and threshold reference levels in the mid 2000s but increasing in recent years following a reduction in catches, with median biomass remaining above target reference levels since the early 2010s. Projections to 2026-27 show an increasing trend. F trajectories remained at a negligible level at the start of the time series, peaking in the late 2000s (when limit reference levels were exceeded) and declining in recent years. For 2021-22, median F was considerably below the target reference level.  Projections to 2026-27 show a stable trend in F. For 2021-22 and 2026-27, the probability that the relative biomass was above the limit reference level was 100% and the probability that F was below the limit reference level was 100%. Based on all available lines of evidence (see Table below), the risk level over the next five years is estimated to be **Low**. On the basis of this evidence, sandbar shark is classified as a **Sustainable stock**.
+
+For the non-indicator species, based on all available lines of evidence (see Table below), the risk level over the next five years is estimated to be **High** for angel sharks, **Medium** for sawsharks, copper, and spinner sharks, and **Low** for the other non-indicator species. For copper and angel sharks, most of the catch has been taken by fisheries outside the jurisdiction of WA and angel sharks were classed as **High** risk due to the high levels of uncertainty in the MSY value inferred from catch-only modelling. On the basis of this evidence, all non-indicator species are classified as **Sustainable stocks**.
+
+
+```{r, echo=FALSE}
+path=paste(Model.outputs.RAR,'/Available time series by species.tiff',sep='')
+
+```
+![Figure 1. Available time series for the species assessed as having High vulnerability to fishing by the PSA. F, empirical fishing mortality estimates for the TDGDLF.](`r path`){width=800px}
+
+```{r, echo=FALSE}
+path=paste(Model.outputs.an,'/Stock assessment flow chart.tiff',sep='')
+
+```
+![Figure 2. Flowchart describing the steps undertaken in the current assessment. The number of species assessed by the different assessment methods is shown in brackets.](`r path`){width=800px}
 
 
 
-# Current situation
-**REDO FROM HERE....**For Snapper, the current assessment (Level 5) is primarily based on estimates of relative female spawning biomass (Brel) and fishing mortality (F) from an integrated model fitted to commercial catch rate data, catch and age composition data up to and including the 2020/21 quota year.
-Based on all available lines of evidence (see Weight of Evidence Table below), the risk level for  Gascoyne Oceanic Snapper over the next five years is estimated to be **Medium**.
-On the basis of this evidence, Gascoyne Oceanic Snapper is classified as a **Recovering stock**. 
-For Goldband snapper, the current assessment (Level 3) is primarily based on estimates of ‘long term’ (equilibrium) fishing mortality (F) and relative female spawning biomass (Brel) from catch curve and per-recruit analyses, respectively, and incorporates catch and age composition data up to and including the 2019/20 quota year.  
-Based on all available lines of evidence (see Weight of Evidence Table below), the risk level for Goldband snapper in Gascoyne over the next five years is estimated to be **Low**.
-On the basis of this evidence, Goldband snapper in the Gascoyne is classified as a **Sustainable stock**.
-**.... TO HERE**
+
+
 
 # Executive summary
 Over a hundred elasmobranch species have been identified in the catch of commercial and/or recreational fisheries in WA. Gummy, dusky, whiskery and sandbar sharks are the most commonly captured species (~80% of the elasmobranch catch). These species have been targeted in the Temperate Demersal Gillnet and Demersal Longline Fisheries (TDGDLF), which operate in the West Coast and South Coast Bioregions and comprise the West Coast Demersal Gillnet and Demersal Longline (Interim) Managed Fishery (WCDGDLF), which operates between 26° and 33° S, and the Joint Authority Southern Demersal Gillnet and Demersal Longline Managed Fishery (JASDGDLF), which operates from 33° S to the WA/SA border. Sandbar shark and to a lower extent dusky shark were also targeted by the Northern Shark Fisheries, which operated between 114° 06' E and the WA/Northern Territory (NT) border and ceased operations in 2008-09. The current catch of sharks and rays in other WA commercial fisheries is negligible (< 10 t per annum) and recreational fishers retain very small numbers of sharks in WA. Indigenous catches of these species are considered to have always been negligible.
