--- a/WoE.Rmd
+++ b/WoE.Rmd
@@ -69,9 +69,10 @@ Date	`r format(Sys.time(), "%d %B %Y")`
 
 
 # Background
-This document provides the `r format(Sys.time(), "%Y")` research advice on the stock status and risk to sustainability over the next five years for all elasmobranch (sharks and rays) species and/or stocks identified in the catches of commercial and/or recreational fisheries operating in Western Australia (WA). This includes the indicator species, gummy (*Mustelus antarcticus*), dusky (*Carcharhinus obscurus*), whiskery (*Furgaleus macki*) and sandbar (*C. plumbeus*) sharks, and non-indicator species. A risk-based Weight of Evidence (WoE) assessment of stocks status was undertaken for all these species using ISO 31000-based risk assessment methods.
+This document provides the `r format(Sys.time(), "%Y")` research advice on the stock status and risk to sustainability over the next five years for all elasmobranch (sharks and rays) species and/or stocks identified in the catches of commercial and/or recreational fisheries operating in Western Australia (WA). This includes the indicator species, gummy (*Mustelus antarcticus*), dusky (*Carcharhinus obscurus*), whiskery (*Furgaleus macki*) and sandbar (*C. plumbeus*) sharks, and non-indicator species, i.e., all other elasmobranch species caught. A risk-based Weight of Evidence (WoE) assessment of stocks status was undertaken for all these species using ISO 31000-based risk assessment methods.
 
 # Current situation
+## Indicator Species
 The current assessment for gummy shark is based on catch-only modelling and spatio-temporal catch and effort distribution (Level 1), state space surplus production modelling fitted to the abundance series (Level 4) and integrated population dynamics modelling (Level 5) fitted to the abundance series, length composition and mean body weight data. Based on all available lines of evidence (see Weight of Evidence Tables below), the risk level for gummy shark over the next five years is estimated to be **Low**. Current (2021-22) biomass estimates exhibit considerable uncertainty, but estimates are above the target level and are projected to increase. Current fishing mortality estimates are below the target level and are projected to remain below this level. 
 
 On the basis of this evidence, gummy shark is classified as a **Sustainable stock**. 
@@ -90,6 +91,7 @@ On the basis of this evidence, sandbar shark is classified as a **Sustainable st
 
 For the indicator species, maintaining current management settings (i.e., assuming total catches are sustained at current levels) is predicted to maintain the sustainability risk at acceptable levels. However, biomass trajectories show considerable uncertainty due to the data-limited nature of the assessments and this should be a consideration for future management arrangements.
 
+## Non-indicator Species
 The current assessment for non-indicator species is based on catch-only modelling and spatio-temporal catch and effort distribution (Level 1), state space surplus production modelling fitted to the abundance series (Level 4) and/or integrated population dynamics modelling (Level 5) fitted to the abundance series and/or length composition data depending on data availability. Based on all available lines of evidence (see Weight of Evidence Tables below), the risk level over the next five years is estimated to be **High** for angel sharks, **Medium** for sawsharks, copper, and spinner sharks, and  **Low** for the other non-indicator species. Non-indicator species are only a minor component of fisheries currently operating under the jurisdiction of WA. The highest sources of fishing mortality for these species ceased decades ago. For two of the non-indicator species (copper and angel sharks), most of the catch has been taken by fisheries outside the jurisdiction of WA. Copper shark is a shared stock across southern Australia and most of the catch originates from South Australia’s Marine Scalefish Fishery. Angel sharks in WA are mainly captured by the Commonwealth managed Great Australian Bight Trawl Fishery and were classed as **High** risk due to the high levels of uncertainty in the MSY value inferred from catch-only modelling (see *Level 1 Assessment* below in *Risk-based weight of evidence table: Non-indicator species*). 
 
 On the basis of this evidence, all non-indicator species are classified as **Sustainable stocks**.
@@ -101,11 +103,11 @@ On the basis of this evidence, all non-indicator species are classified as **Sus
 Assessment date: `r format(Sys.time(), "%B %Y")`
 
 # Executive Summary
-Over 100 elasmobranch species have been identified in the catches of commercial and/or recreational fisheries in Western Australia (WA). Gummy, dusky, whiskery, and sandbar sharks are the most commonly captured species (~80% of the elasmobranch catch). These species have been targeted in the Temperate Demersal Gillnet and Demersal Longline Fisheries (TDGDLF), which operates in the West Coast and South Coast Bioregions and comprises the West Coast Demersal Gillnet and Demersal Longline (Interim) Managed Fishery (WCDGDLF), which operates between 26° and 33° S, and the Joint Authority Southern Demersal Gillnet and Demersal Longline Managed Fishery (JASDGDLF), which operates from 33° S to the WA/South Australia (SA) border. Sandbar shark and to a lesser extent dusky shark were also targeted by the Northern Shark Fisheries, which operated between 114° 06’ E and the WA/Northern Territory (NT) border and ceased operations in 2008-09. The current catch of sharks and rays in other WA commercial fisheries is negligible (< 10 t per annum), and recreational fishers retain very small numbers of sharks in WA. Indigenous catches of these species are considered to be negligible both in terms of historical and extant harvest.
+Over 100 elasmobranch species have been identified in the catches of commercial and/or recreational fisheries in Western Australia (WA). Gummy, dusky, whiskery, and sandbar sharks are the most commonly captured species (~80% of the elasmobranch catch). These species have been targeted in the Temperate Demersal Gillnet and Demersal Longline Fisheries (TDGDLF), which operates in the West Coast and South Coast Bioregions and comprises the West Coast Demersal Gillnet and Demersal Longline (Interim) Managed Fishery (WCDGDLF), which operates between 26° and 33° S, and the Joint Authority Southern Demersal Gillnet and Demersal Longline Managed Fishery (JASDGDLF), which operates from 33° S to the WA/South Australia (SA) border. Sandbar shark and, to a lesser extent, dusky shark were also targeted by the Northern Shark Fisheries, which operated between 114° 06’ E and the WA/Northern Territory (NT) border and ceased operations in 2008-09. The current catch of sharks and rays in other WA commercial fisheries is negligible (< 10 t per annum), and recreational fishers retain very small numbers of sharks in WA. Indigenous catches of these species are considered to be negligible both in terms of historical and extant harvest.
 
 Based on their importance to fisheries, inherent vulnerabilities, and sustainability risk, whiskery, gummy, dusky, and sandbar sharks have been selected as indicators for the status of the temperate elasmobranch (sharks and rays) ‘suite’ as they represent the range of life history strategies of other elasmobranch species caught by these fisheries. However, with the increasing number of elasmobranch species being listed in national (Environment Protection and Biodiversity Conservation Act 1999, EBPC Act) and international (Convention on International Trade in Endangered Species, CITES; Convention on the Conservation of Migratory Species, CMS) protection lists, species-specific scientific advice on stock status at the local level is needed to comply with national and international legislation.
 
-For whiskery shark, the initial historical stock assessment was based on a bespoke age- and sex-structured model (i.e., L5 assessment). This assessment determined that the mature female biomass in 1997-98 (the last year of the assessed data series) was at 23% of virgin levels, and to achieve management biomass targets with a 50% probability by 2010, recommended catches were required to be maintained below 190 tonnes. For sandbar and dusky sharks, previous stock assessments were based on demographic and mark recapture analyses. These assessments determined that the combined fishing pressure from WA shark fisheries and cryptic mortality from other fisheries was deemed unsustainable at the effort peak (1990s-2000s). More recently, the weight of evidence assessments for the four indicator species (L1 and L5 assessments for whiskery shark, L1 assessments for gummy, dusky, and sandbar sharks), determined that the risk posed by fishing to the sustainability of these stocks was assessed as Medium for 2015-16 (the last year of the data series) and for the projected period to 2020-21. Prior to the current study, there has been no stock assessments for other shark and ray species captured in WA.
+For whiskery shark, the initial historical stock assessment [@Simpfendorfer2000a] was based on a bespoke age- and sex-structured model (i.e., L5 assessment). This assessment determined that the mature female biomass in 1997-98 (the last year of the assessed data series) was at 23% of virgin levels, and to achieve management biomass targets with a 50% probability by 2010, recommended catches were required to be maintained below 190 tonnes. For sandbar and dusky sharks, previous stock assessments [@McAuley2007b] were based on demographic and mark recapture analyses. These assessments determined that the combined fishing pressure from WA shark fisheries and cryptic mortality from other fisheries was deemed unsustainable at the effort peak (1990s-2000s). More recently, the weight of evidence assessments for the four indicator species (L1 and L5 assessments for whiskery shark, L1 assessments for gummy, dusky, and sandbar sharks; @bracciniRiskbasedWeightEvidence2021), determined that the risk posed by fishing to the sustainability of these stocks was assessed as Medium for 2015-16 (the last year of the data series) and for the projected period to 2020-21. Prior to the current study, there has been no stock assessments for other shark and ray species captured in WA because the main species were considered as indicators to entire suite of species.
 
 Following a comprehensive reconstruction of the total catch trajectories of all species for which data are available, a range of assessment methods was used to provide species-specific scientific advice on the stock status of all elasmobranch species in WA. First, a Productivity Susceptibility Analysis (PSA) was used to filter out species with historically very low catch volumes, and those with low vulnerability from further analysis. Second, species ranked by the PSA as having high vulnerability were assessed using a combination of spatio-temporal changes in reported catch and effort, catch-only models, State-space surplus production models, and age- and sex-structured integrated models, depending on data availability (Figure 1). Biomass estimates from the production and integrated models were compared to reference levels relating to estimates of Maximum Sustainable Yield (MSY). The estimated biomass expected to achieve MSY (BMSY) was considered as the Threshold reference level (BThr) for the stock; 0.5 BMSY was set as the Limit reference level (BLim) and 1.2 BMSY was set as the Target reference level (BTar). A flowchart explaining the steps undertaken in this assessment is shown in Figure 2.
 
@@ -127,17 +129,17 @@ For the non-indicator species, based on all available lines of evidence (see Tab
 path=paste(Model.outputs.RAR,'/Available time series by species.tiff',sep='')
 
 ```
-![Figure 1. Available time series for the species assessed as having High vulnerability to fishing by the PSA. F, empirical fishing mortality estimates for the TDGDLF.](`r path`){width=800px}
+![Figure 1. Available time series for the species assessed as having High vulnerability to fishing by the PSA. F, empirical fishing mortality estimates for the TDGDLF. (N.B., F was obtained from McAuley et al., 2007a)](`r path`){width=800px}
 
 ```{r, echo=FALSE}
 path=paste(Model.outputs.an,'/Stock assessment flow chart.tiff',sep='')
 
 ```
-![Figure 2. Flowchart describing the steps undertaken in the current assessment. The number of species assessed by the different assessment methods is shown in brackets.](`r path`){width=800px}
+![Figure 2. Flowchart describing the steps undertaken in the current assessment. The number of species assessed by the different assessment methods is shown in brackets. (N.B., vulnerability thresholds for defining risk level were obtained from Hobday et al. (2007))](`r path`){width=800px}
 
 
 # Future Monitoring & Assessment
-Additional information (e.g., a mortality estimate for a certain period from representative age composition data, a point estimate of absolute abundance from genetic techniques such as close-kin mark-recapture, Bravington et al. [-@bravingtonAbsoluteAbundanceSouthern2016]), would assist in reducing model uncertainties, particularly for those species for which reconstructed catches are not negligible but only catch and life history information are available. Also, life history information for most species is not stock-specific, and in a few cases, not species-specific. Hence, targeted collection of biological information (reproduction, growth) would assist future assessments as stock-specific information that is currently available is several decades old.
+Additional information (e.g., a mortality estimate for a certain period from representative age composition data, a point estimate of absolute abundance from genetic techniques such as close-kin mark-recapture, Bravington et al. [-@bravingtonAbsoluteAbundanceSouthern2016]), would assist in reducing model uncertainties, particularly for those species for which reconstructed catches are not negligible but only catch and life history information are available. Also, life history information for most species is not stock-specific, and in a few cases, not species-specific. Hence, targeted collection of biological information (reproduction, growth) would assist future assessments as stock-specific information that is currently available is several decades old. This is particularly relevant for dusky shark, which was classified as High risk.
 
 There is a heavy reliance on fishery-dependent catch per unit of effort (CPUE) data to inform depletion levels for all species except sandbar shark, for which reliable fishery-independent data are available. A long-term fishery-independent monitoring program to collect abundance and/or composition data, particularly in temperate WA, would assist in reducing model uncertainties. This would be particularly useful for gummy, whiskery, and dusky sharks, noting that some of the integrated model fit diagnostics were not robust (e.g., retrospective analysis and hindcasting for gummy shark, likelihood profiling for most assessed species) due to data limitations or could not be conducted, such as retrospective analysis and hindcasting, due to lack of recent data (e.g., dusky shark).
 
@@ -1778,17 +1780,3 @@ Tab=full_join(Tab1,Tab2,by=c("Range","Scenario","finyear","Model"))%>%
 
 <br>  
 
-
-# Appendix 13. Stock Synthesis control files for the basecase integrated population dynamics models   
-
-```{r results="asis"}
-# SP_ind=read.csv(paste(Model.outputs.RAR,"Table 10. Age.based_SS_scenarios_Indicator.sp.csv",sep='/'))%>%pull(Species)
-# SP_other=read.csv(paste(Model.outputs.RAR,"Table 10. Age.based_SS_scenarios_Other.sp.csv",sep='/'))%>%pull(Species)
-# Species=unique(sort(c(SP_ind,SP_other)))
-for(i in 1:length(Species))
-{
-   cat('\n##', Species[i], '\n')
-   cat(readLines(paste(Model.outputs.an,paste("1.",Species[i],'/',this.yr,'/SS3 integrated/S1/control.ctl',sep=''),sep='')),sep = "  \n")
-   cat('\n')
- }
-```  
